[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/talo/samples/leaderboards/leaderboard.gd" type="Script" id=1]

[node name="Leaderboard" type="Node"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 119.0
margin_bottom = 112.0

[node name="LeaderboardNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 119.0
margin_bottom = 14.0
text = "Leaderboard name"

[node name="EntriesVBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 119.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/EntriesVBoxContainer"]
margin_right = 119.0
margin_bottom = 14.0
text = "Loading..."

[node name="LineEditUserName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 119.0
margin_bottom = 60.0
text = "Name"

[node name="LineEditPlayerName" type="LineEdit" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 119.0
margin_bottom = 88.0
text = "Name"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 119.0
margin_bottom = 112.0
text = "Send"
